OpenTTY Java Edition 1.16.1
Copyright (C) 2025 - Mr. Lima

[ _Commands_ ]

- 

[ _Updates_ ]

- **Audio API** added support to play **.midi** files
- **Lua** added support for `repeat until [expr]` loops
- **Lua** added default library `socket` with network interfaces
- **Lua** `io` library added new function `close(stream)` to close interfaces
- **Lua** removed bug that pcall recognizes string function name to call
- Classes **MIDletControl** and **Connect** have been merged
- New Package field `api.require` to check MIDlet dependencies, if false run `api.error`
- Removed Command `server`
- Removed file `/java/etc/index.html`
- Removed default environment key **RESPONSE**
- Command `x11 item` remove all personalized itens from default screen
- New Package **WebProxy**

[ _Notes_ ]


[ _API Nodes_ ]

- `lua`: check if current MIDlet build has Lua