@@ -138,3 +138,4 @@
 [2025-1.16.1-02x71] Support for 'api.require'
 [2025-1.16.1-02x72] Removed native Server
 [2025-1.16.1-02x73] ItemLoader and MIDletControl Threads merged
+[2025-1.16.1-02x74] Background and MIDlet-MOD Threads merged with MIDletControl
